objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>Add_additional_time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add additional time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_End_Date_Time__c</fullName>
        <label>Additional End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_Start_Date_Time__c</fullName>
        <label>Additional Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_Time_User__c</fullName>
        <label>Additional Time User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Travel_Start_Time__c</fullName>
        <label>Additional Travel Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssetID__c</fullName>
        <formula>AssetId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssetID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Fault_Picklist__c</fullName>
        <label>Asset Type Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Asset_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Fault__c</fullName>
        <label>Asset Fault</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Asset_Fault_Picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Blown GFCI Fuse</fullName>
                </value>
                <value>
                    <fullName>DAS Failure (hardware)</fullName>
                </value>
                <value>
                    <fullName>DAS Failure (software)</fullName>
                </value>
                <value>
                    <fullName>External Damage</fullName>
                </value>
                <value>
                    <fullName>Facility Network Issue</fullName>
                </value>
                <value>
                    <fullName>Facility Outage/Issue</fullName>
                </value>
                <value>
                    <fullName>Failed AFCI Controller</fullName>
                </value>
                <value>
                    <fullName>Failed Anemometer</fullName>
                </value>
                <value>
                    <fullName>Failed Breaker</fullName>
                </value>
                <value>
                    <fullName>Failed Communication</fullName>
                </value>
                <value>
                    <fullName>Failed DC Connector</fullName>
                </value>
                <value>
                    <fullName>Failed DC Wire</fullName>
                </value>
                <value>
                    <fullName>Failed Fan</fullName>
                </value>
                <value>
                    <fullName>Failed Fuse</fullName>
                </value>
                <value>
                    <fullName>Failed Inline Fuse</fullName>
                </value>
                <value>
                    <fullName>Failed Inverter (Full Replacement)</fullName>
                </value>
                <value>
                    <fullName>Failed Main Breaker</fullName>
                </value>
                <value>
                    <fullName>Failed Modem</fullName>
                </value>
                <value>
                    <fullName>Failed Module (Failed Bypass Diode)</fullName>
                </value>
                <value>
                    <fullName>Failed Module (internal short)</fullName>
                </value>
                <value>
                    <fullName>Failed Other Internal Component</fullName>
                </value>
                <value>
                    <fullName>Failed Power Supply</fullName>
                </value>
                <value>
                    <fullName>Failed Pyrometer</fullName>
                </value>
                <value>
                    <fullName>Failed Racking</fullName>
                </value>
                <value>
                    <fullName>Failed Switch</fullName>
                </value>
                <value>
                    <fullName>Failed Temp Sensor</fullName>
                </value>
                <value>
                    <fullName>Failed Termination</fullName>
                </value>
                <value>
                    <fullName>Failed Wind vane</fullName>
                </value>
                <value>
                    <fullName>Failure Capacitor</fullName>
                </value>
                <value>
                    <fullName>Failure Contactor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Issue_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Issue Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Manufacturer__c</fullName>
        <formula>Asset.Product2.Manufacturer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Model__c</fullName>
        <description>pulls over product name from related asset</description>
        <formula>Asset.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls over product name from related asset</inlineHelpText>
        <label>Asset Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <formula>Asset.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Offline__c</fullName>
        <label>Asset Offline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asset_Online__c</fullName>
        <label>Asset Online</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asset_Serial_Number__c</fullName>
        <formula>Asset.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Sort__c</fullName>
        <formula>MID(Asset.Name, 1, 1) +  RIGHT(Asset.Name,(LEN(Asset.Name)-FIND(&quot;-&quot;, Asset.Name)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Sort #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <formula>TEXT(Asset.Component_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendarLabel__c</fullName>
        <description>used for calendar anything display</description>
        <formula>WorkOrder.Contract__r.ASProject__r.Name + &quot;- &quot; + WorkOrder.WorkType.Name + &quot;-&quot; + Asset.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used with Lookup Helper to associate the WOLI to the Case for reporting</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Record_Type_Name__c</fullName>
        <formula>Checklist__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_Record_Type__c</fullName>
        <formula>Checklist__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comments Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <formula>TEXT(WorkOrder.Maintenance_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevailing_Wage_Total__c</fullName>
        <description>Total time * Prevailing Wage Rate from Contract</description>
        <formula>Total_Time_Spent__c *  WorkOrder.Contract__r.Internal_Prevailing_Wage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total time * Prevailing Wage Rate from Contract</inlineHelpText>
        <label>Prevailing Wage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResourceLoggedIn__c</fullName>
        <formula>IF(WorkOrder.OwnerId=$User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Logged In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Asset_Offline__c</fullName>
        <formula>(Asset_Online__c-Asset_Offline__c) *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Asset Offline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <label>Total Time Spent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Traveled__c</fullName>
        <label>Total Time Traveled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_on_Job__c</fullName>
        <label>Total Time on Job</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TravelTimeNew__c</fullName>
        <formula>((Start_Time__c-Travel_Start_Time__c)*24*60)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Time New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Start_Time__c</fullName>
        <label>Travel Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Travel_Time__c</fullName>
        <formula>Case(
ROUND(VALUE(IF(LEN(MID(TEXT(( Start_Time__c - Travel_Start_Time__c )*24), FIND(&quot;.&quot;, TEXT(( Start_Time__c - Travel_Start_Time__c )*24))+1, 2))&gt;1,MID(TEXT(( Start_Time__c - Travel_Start_Time__c )*24),
FIND(&quot;.&quot;, TEXT(( Start_Time__c - Travel_Start_Time__c )*24))+1, 2),MID(TEXT(( Start_Time__c - Travel_Start_Time__c )*24), FIND(&quot;.&quot;, TEXT(( Start_Time__c - Travel_Start_Time__c )*24))+1, 2)&amp;&quot;0&quot;))/25,0),
0,VALUE(MID(TEXT(( Start_Time__c - Travel_Start_Time__c )*24), 0, FIND(&quot;.&quot;, TEXT( ( Start_Time__c - Travel_Start_Time__c )*24))) &amp; &quot;00&quot;),
1,VALUE(MID(TEXT(( Start_Time__c - Travel_Start_Time__c )*24), 0, FIND(&quot;.&quot;, TEXT( ( Start_Time__c - Travel_Start_Time__c )*24))) &amp; &quot;25&quot;),
2,VALUE(MID(TEXT(( Start_Time__c - Travel_Start_Time__c )*24), 0, FIND(&quot;.&quot;, TEXT( ( Start_Time__c - Travel_Start_Time__c )*24))) &amp; &quot;5&quot;),
3,VALUE(MID(TEXT(( Start_Time__c - Travel_Start_Time__c )*24), 0, FIND(&quot;.&quot;, TEXT( ( Start_Time__c - Travel_Start_Time__c )*24))) &amp; &quot;75&quot;),
4,VALUE(MID(TEXT(( Start_Time__c - Travel_Start_Time__c )*24), 0, FIND(&quot;.&quot;, TEXT( ( Start_Time__c - Travel_Start_Time__c )*24))) &amp; &quot;00&quot;) + 1,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOL_has_comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Filled in by a WF</description>
        <inlineHelpText>Gets checked off when a Work Order Line Items has a comment. Used in Conga reports.</inlineHelpText>
        <label>WOL has comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_Asset_Offline__c</fullName>
        <label>Was Asset Offline?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkHoursNew__c</fullName>
        <formula>((End_Time__c-Start_Time__c)*24*60)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Hours New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Hours__c</fullName>
        <formula>Case(
ROUND(VALUE(IF(LEN(MID(TEXT((End_Time__c - Start_Time__c)*24), FIND(&quot;.&quot;, TEXT((End_Time__c - Start_Time__c)*24))+1, 2))&gt;1,MID(TEXT((End_Time__c - Start_Time__c)*24),
FIND(&quot;.&quot;, TEXT((End_Time__c - Start_Time__c)*24))+1, 2),MID(TEXT((End_Time__c - Start_Time__c)*24), FIND(&quot;.&quot;, TEXT((End_Time__c - Start_Time__c)*24))+1, 2)&amp;&quot;0&quot;))/25,0),
0,VALUE(MID(TEXT((End_Time__c - Start_Time__c)*24), 0, FIND(&quot;.&quot;, TEXT( (End_Time__c - Start_Time__c)*24))) &amp; &quot;00&quot;),
1,VALUE(MID(TEXT((End_Time__c - Start_Time__c)*24), 0, FIND(&quot;.&quot;, TEXT( (End_Time__c - Start_Time__c)*24))) &amp; &quot;25&quot;),
2,VALUE(MID(TEXT((End_Time__c - Start_Time__c)*24), 0, FIND(&quot;.&quot;, TEXT( (End_Time__c - Start_Time__c)*24))) &amp; &quot;5&quot;),
3,VALUE(MID(TEXT((End_Time__c - Start_Time__c)*24), 0, FIND(&quot;.&quot;, TEXT( (End_Time__c - Start_Time__c)*24))) &amp; &quot;75&quot;),
4,VALUE(MID(TEXT((End_Time__c - Start_Time__c)*24), 0, FIND(&quot;.&quot;, TEXT( (End_Time__c - Start_Time__c)*24))) &amp; &quot;00&quot;) + 1,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Instruction__c</fullName>
        <label>Work Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>